# web-search-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
src/web_search_service/: browser_pool.py  cli.py  config.py  ddgs_cli.py  ddgs_search.py  models.py  search.py  server.py  trusted_domains.json
tests/: conftest.py  test_browser_pool.py  test_cli.py  test_ddgs_search.py  test_integration_server.py  test_models.py  test_search.py  test_server.py
