[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-search-service"
version = "0.1.0"
description = "High-performance web search service using FastAPI and Playwright"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "playwright>=1.49",
    "camoufox[geoip]>=0.4",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
]

[project.scripts]
web-search-server = "web_search_service.server:main"
web-search-cli = "web_search_service.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/web_search_service"]

[tool.ruff]
line-length = 100
